# wav2mp3

./: .clang-format  CHANGELOG  CMakeLists.txt  LICENSE  README.md  build_wav2mp3.bat  build_wav2mp3.sh  build_wav2mp3_using_C++_threads.bat  build_wav2mp3_using_C++_threads.sh  clean_cmake.bat  cmake_install.cmake  cxx_link_stdlib_static_overrides.cmake  preparing_ubuntu_18.04_test_environment.txt
docs/doxygen/: Doxyfile  DoxygenLayout.xml  clean.bat  conf.py  header.html  index.rst  open_docs.bat
lame-3.100/lib/: libmp3lame-static.lib  libmp3lame-static_d.lib
lame-3.100/output/Debug/: libmp3lame-static.lib  libmp3lame-static_d.lib  libmp3lame.exp  libmpghip-static.lib
lame-3.100/output/Release/: libmp3lame-static.lib  libmp3lame.exp  libmp3lame.lib  libmpghip-static.lib
pthreads/lib/: libpthreadVC3.lib  libpthreadVC3d.lib  libpthreadVCE3.lib  libpthreadVCE3d.lib  libpthreadVSE3.lib  libpthreadVSE3d.lib
src/: argument_processing.cpp  argument_processing.h  check_directory.cpp  check_directory.h  check_pthread_error.cpp  check_pthread_error.h  condition_variable.cpp  condition_variable.h  configuration.cpp  configuration.h  convert_wav_files.cpp  convert_wav_files.h  future.h  guid.cpp  guid.h  lame_init.cpp  lame_init.h  lame_wrapper.cpp  lame_wrapper.h  mutex.cpp  mutex.h  return_code.cpp  return_code.h  riff_format.cpp  riff_format.h  signal_handler.cpp  signal_handler.h  thread.cpp  thread.h  thread_includes.h  thread_pool.cpp  thread_pool.h  thread_pool_impl.h  thread_queue.h  thread_queue_impl.h  tiostream.cpp  tiostream.h  wav2mp3.cpp  wav2mp3.h
wav2mp3/: CMakeLists.txt  wav2mp3.cpp  wav2mp3.h
wav_testfiles/: not_a_wav.txt
